--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,16 @@
-/* styles go here */
+div {
+  margin-bottom: 10px;
+}
+
+fieldset {
+  margin-bottom: 20px;
+}
+
+fieldset div:last-child {
+  margin-bottom: 0;
+  /* background-color: aqua; */
+}
+
+/* fieldset:nth-child(4) {
+  margin-bottom: 0;
+} */
